--- a/templates/compareEdit.html
+++ b/templates/compareEdit.html
@@ -76,16 +76,16 @@
                 
                     <tr>
                     <th>是否符合</th>
-                    <td><input type="text" id="cConform" name="cConform" value={{unit.cConform}}></td>
+                    <td><input type="text" id="cConform" name="cConform" value="{{unit.cConform}}"></td>
                     </tr>
                     
                     <tr>
                     <th>頁碼</th>
-                    <td><input type="text" id="cPage" name="cPage" value={{unit.cPage}}></td>
+                    <td><input type="text" id="cPage" name="cPage" value="{{unit.cPage}}"></td>
                     </tr>
                     <tr>
                     <th >廠牌</th>
-                    <td><input type="text" id="cBrand" name="cBrand" value={{unit.cBrand}}></td>
+                    <td><input type="text" id="cBrand" name="cBrand" value="{{unit.cBrand}}"></td>
                     </tr>
                     <tr>
                     <th>備註</th>
