--- a/templates/tablespecView.html
+++ b/templates/tablespecView.html
@@ -11,6 +11,13 @@
 </head>
 
 <body>
+  <style>
+    .fixed-section {
+      position: sticky;
+      top: 0;
+      background-color: white;
+    }
+  </style>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
   
@@ -78,8 +85,18 @@
   </nav>
   <div class="container mt-2">  
     <button type="button" class="btn btn-outline-warning mb-2" id="{{Tablespec.cNumber}}" onclick="TablespecEdit(event)">製令編輯</button>
-    <a class="btn btn-outline-success mb-2" id="{{Tablespec.cNumber}}" onclick="outputpdf(event)">匯出PDF</a>
+    <button class="btn btn-outline-success mb-2" id="{{Tablespec.cNumber}}" onclick="outputpdf(event)">匯出PDF</button>
   </div>
+  {% if text != "" %}
+    <div class="container fixed-section">
+      <div class="card">
+        <div class="card-header text-primary" style="font-weight: bold; font-size: larger;">和公版不同的地方</div>
+        <div class="card-body text-danger">
+          <p class="card-text ">{{text|linebreaks}}</p>
+        </div>
+      </div>
+    </div>
+  {% endif %}
   <form action="." method="post" name="form1" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="container">
@@ -93,7 +110,11 @@
           <tr>
             <th></th>
             <th>內板厚度：</th>
-            <td>{{Tablespec.first_inthick}}</td>
+            {% if Tablespec.first_inthick != "0.5t" %}
+              <td style="color: red;">{{Tablespec.first_inthick}}</td>
+            {% else %}
+              <td>{{Tablespec.first_inthick}}</td>
+            {% endif %}
             <th>內板材質：</th>
             <td>{{Tablespec.first_inmaterial}}</td>
             <th>螺絲配件：</th>
@@ -101,8 +122,13 @@
           </tr>
           <tr>
             <th></th>
+            
             <th>外板厚度：</th>
-            <td>{{Tablespec.first_outthick}}</td>
+            {% if Tablespec.first_inthick != "0.5t" %}
+              <td style="color: red;">{{Tablespec.first_inthick}}</td>
+            {% else %}
+              <td>{{Tablespec.first_inthick}}</td>
+            {% endif %}
             <th>外板材質：</th>
             <td>{{Tablespec.first_outmaterial}}</td>
             <th>箱板材質：</th>
@@ -244,18 +270,30 @@
             <th>鰭片：</th>
             <td>{{Tablespec.seven_fins}}</td>
             <th>厚度：</th>
-            <td>{{Tablespec.seven_thick}}</td>
+            {% if Tablespec.seven_thick != "0.12t" %}
+              <td style="color: red;">{{Tablespec.seven_thick}}</td>
+            {% else %}
+              <td>{{Tablespec.seven_thick}}</td>
+            {% endif %}
             <th>端側板：</th>
             <td>{{Tablespec.seven_board}}</td>
           </tr>
           <tr>
             <th></th>
             <th>銅管厚度：</th>
-            <td>{{Tablespec.seven_pipe_thick}}</td>
+            {% if Tablespec.seven_pipe_thick != "0.41t" %}
+              <td style="color: red;">{{Tablespec.seven_pipe_thick}}</td>
+            {% else %}
+              <td>{{Tablespec.seven_pipe_thick}}</td>
+            {% endif %}
             <th>集水管：</th>
             <td>{{Tablespec.seven_waterpipe}}</td>
             <th>銅管管徑：</th>
-            <td>{{Tablespec.seven_size}}</td>
+            {% if Tablespec.seven_size != "1/2\"" %}
+              <td style="color: red;">{{Tablespec.seven_size}}</td>
+            {% else %}
+              <td>{{Tablespec.seven_size}}</td>
+            {% endif %}
           </tr>
           <tr>
             <th>2.熱水盤管</th>
@@ -332,7 +370,11 @@
             <th>材質：</th>
             <td>{{Tablespec.eight_material}}</td>
             <th>厚度：</th>
-            <td>{{Tablespec.eight_thick}}</td>
+            {% if Tablespec.eight_thick != "1.2t" %}
+              <td style="color: red;">{{Tablespec.eight_thick}}</td>
+            {% else %}
+              <td>{{Tablespec.eight_thick}}</td>
+            {% endif %}
           </tr>
           <tr>
             <th>九、風車：</th>
@@ -575,7 +617,11 @@
     function outputpdf(event){
             var id = event.target.id
             $(location).attr("href","/render_pdf_view/"+id+'/');
-        }
+    }
+    function TablespecEdit(event){
+            var id = event.target.id
+            $(location).attr("href","/tablespecEdit/"+id+'/load');
+    }
 
 
 
